Restructuring multi-release jar build in java and adding tests